# CuerManager

./: .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  build.ps1  build.rs  dev.sh  library.empty.db  release.sh  stage.sh
cuecard_indexer/: Cargo.toml
cuecard_indexer/src/: lib.rs  main.rs
cuer_database/: Cargo.toml
cuer_database/src/: lib.rs  models.rs  schema.rs
cuer_manager_backend/: Cargo.toml  dev.sh  release.sh
cuer_manager_backend/public/: 3rdpartylicenses.txt  index.html  main-es2015.0bac85cadb8d219ab67a.js  main-es5.0bac85cadb8d219ab67a.js  polyfills-es2015.6aa8ba5aa81f0f99af0c.js  polyfills-es5.c57c4e478172c057fe57.js  runtime-es2015.3365b2b8cdbe600733af.js  styles.058062646f4a31b0ad98.css
cuer_manager_backend/src/: convert.rs  cuecards.rs  guards.rs  main.rs  playlists.rs  programming.rs  routes.rs
cuer_manager_backend/ui/: package-lock.json  package.json
migrations/2018-01-13-183402_init/: down.sql
migrations/2019-08-10-162408_tip_cuecard_sort_order/: down.sql  up.sql
migrations/2019-10-29-080332_cuecard_file_path/: down.sql  up.sql
migrations/2019-11-04-084249_add_date_details/: down.sql  up.sql
src/: cuecards.rs  documents.rs  elastic.rs  guards.rs  main.rs  playlists.rs  programming.rs  routes.rs  tests.rs
static/js/: index.html  package.json
static/js/config/: index.js
static/js/src/components/: CuesheetItem.vue  Cuesheets.vue
static/js/src/router/: index.js
static/js/test/: package.json
ui/: README.md  package.json
ui/public/: index.html
ui/src/: App.css  App.js  Playlists.js  Search.js  index.css  index.js
ui/src/actions/: playlists.js  search.js
ui/src/constants/: ActionTypes.js  api.js
ui/src/middleware/: api.js
ui/src/reducers/: index.js  playlists.js  search.js
ui/src/store/: setupStore.dev.js  setupStore.js  setupStore.prod.js
win/: Rocket.toml.default  cuer_manager.bat  sqlite3.lib
