[package]
name = "cuer_manager"
version = "0.7.0"
authors = ["Alexander Sopicki"]

[dependencies]

rocket = "0.4.0-rc.1"
json_str = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
hyper = "^0.10.11"
unescape = "0.1.0"
comrak = "0.2.8"
diesel = { version = "1.0", features = ["sqlite"] }
r2d2-diesel = "1.0"
r2d2 = "0.8.2"
uuid = { version = "^0.6", features = ["v4"] }
cuer_database = { version = "0.2.0", path="../cuer_database" }
dirs = "1.0.4"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]

