[package]
name = "cuer_manager"
version = "0.7.0"
authors = ["Alexander Sopicki"]

[dependencies]

rocket = "0.4.0"
json_str = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
hyper = "^0.12"
unescape = "0.1.0"
comrak = "0.4"
chrono = "*"
diesel = { version = "1.3", features = ["sqlite"] }
r2d2-diesel = "1.0"
r2d2 = "0.8.2"
uuid = { version = "^0.7", features = ["v4"] }
cuer_database = { version = "^0.3", path="../cuer_database" }
dirs = "1.0.4"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_sqlite_pool"]

