[package]
name = "cuer_manager"
version = "0.9.6"
authors = ["Alexander Sopicki"]
edition = "2018"

[dependencies]

rocket = "0.4.2"
json_str = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
hyper = "^0.12"
unescape = "0.1.0"
comrak = "0.6"
chrono = "*"
diesel = { version = "1.3", features = ["sqlite"] }
r2d2-diesel = "1.0"
r2d2 = "0.8.2"
uuid = { version = "^0.7", features = ["v4"] }
cuer_database = { version = "^0.5", git="https://github.com/asopicki/cuer_database.git" }
dirs = "^2.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_sqlite_pool"]

