[package]
name = "cuecard_indexer"
version = "0.6.0"
authors = ["Alexander Sopicki <asopicki@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
walkdir = "^2.2"
regex = "1"
once_cell = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "^0.8", features = ["v4"] }
filetime = "^0.2"
log = "^0.4"
env_logger = "0.7"
cuer_database = { path="../cuer_database" }
structopt = { version = "0.3", default-features = false }
