[package]
name = "cuer_manager"
version = "1.7.6"
authors = ["Alexander Sopicki"]
edition = "2018"

[dependencies]

log = "0.4"
rocket = "0.4.2"
json_str = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hyper = "^0.12"
unescape = "0.1.0"
comrak = "0.6"
chrono = "*"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"
r2d2-diesel = "1.0"
r2d2 = "0.8"
uuid = { version = "^0.7", features = ["v4"] }
cuer_database = { path="../cuer_database" }
dirs = "^2.0"
duct = "0.13"
base64 = "0.10"
zip = "0.5"
xml-rs = "0.8"
tempfile = "3.1"
walkdir = "2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_sqlite_pool"]

